# Friday-

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Dockerfile.engine  README.md  app.cmd  app.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
apps/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
core/schemas/: code_agent.json  media_control.json  open_app.json  reminder.json  safe_shell.json
deploy/helm/: values-production.yaml  values-staging.yaml
deploy/k8s/: api-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  engine-deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  secret.example.yaml  services.yaml
docs/: api-contracts.md  architecture.md  core-assistant-engine.md  dashboard-integration.md  deployment.md  master_prompt_codex.md  roadmap.md
friday/: api.py  code_context.py  code_workflow.py  config.py  dashboard_auth.py  dashboard_service.py  events.py  hybrid_dispatcher.py  jarvis_compat.py  llm.py  main.py  model_manager.py  orchestrator.py  planner.py  policy.py  schemas.py  storage.py  voice.py
friday/assistant_engine/: cli.py  (+6 more)
scripts/: bootstrap_windows.ps1  prepare_jarvis_ui_bridge.ps1  run_api.ps1
tests/: test_api_smoke.py  test_assistant_engine.py  test_code_agent_tool.py  test_code_context.py  test_dashboard_api.py  test_hybrid_dispatcher.py  test_jarvis_compat_api.py  test_models_api.py  test_open_app_tool.py  test_planner.py  test_policy.py  test_safe_shell_tool.py  test_voice_api.py  test_voice_pipeline.py
(+32 files in other folders)
