[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "friday-offline-assistant"
version = "0.1.0"
description = "Offline-first local AI assistant with action planning, safe tool execution, and voice-ready architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pavankumar-p-k" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[project.scripts]
friday-api = "friday.main:run"
friday-engine = "friday.assistant_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
